add logo, fix hover style

--- a/index.html
+++ b/index.html
@@ -15,13 +15,20 @@
         .js-droppable > .js-snippet:hover > .js-delete-btn{
             display: block;
         }
+        .js-droppable > .js-snippet > img:hover {
+            transform: none;
+            border-color: #dae1e7;
+        }
     </style>
-    <title>Web Component Library</title>
+    <title>Stitches - A HTML template generator using functional css</title>
   </head>
   <body class="overflow-hidden font-sans">
     <section class="fixed pin-l pin-t pin-b overflow-y-scroll bg-white p-8 w-2/3">
-      <h1 class="font-black mb-4 ml-2"><a href="/" class="no-underline text-black">Stitches</a></h1>
-      <div class="border-l-2 mx-2 mb-4 js-filter pl-3 border-black">
+      <h1 class="font-black mb-8 ml-2 pb-2">
+        <a href="/" class="no-underline text-black no-underline text-black transition text-geen">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531655346/logo.svg" class="inline-block mr-2 w-10 -mb-2">Stitches</a>
+        </h1>
+      <div class="border-l-2 mx-2 mb-3 js-filter pl-3 border-black">
         <!-- General -->
         <button class="text-black font-semibold hover:text-green px-2 py-1 transition-normal" data-filter="js-snippet">All</button>
         <button class="text-black font-semibold hover:text-green px-2 py-1 transition-normal" data-filter="st-navigation">Navigation</button>
@@ -44,100 +51,100 @@
       </div>
       <div class="flex flex-wrap flex-col items-start justify-start js-snippets">
         <figure class="js-snippet w-1/2 p-2 st-navigation" id="navigation-1">
-            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/navigation-1.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/navigation-1.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-navigation" id="navigation-2">
-            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/navigation-2.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/navigation-2.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-navigation" id="navigation-3">
-            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/navigation-3.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/navigation-3.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-navigation" id="navigation-4">
-            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/navigation-4.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/navigation-4.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-hero" id="hero-1">
-            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208867/stitches/hero-1.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208867/stitches/hero-1.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-hero" id="hero-2">
-            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208863/stitches/hero-2.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208863/stitches/hero-2.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-hero" id="hero-3">
-            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208864/stitches/hero-3.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208864/stitches/hero-3.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-footer" id="footer-1">
-            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/footer-1.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/footer-1.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-footer" id="footer-2">
-            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/footer-2.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/footer-2.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-footer" id="footer-3">
-            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/footer-3.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/footer-3.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-feature" id="features-1">
-            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/features-1.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/features-1.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-feature" id="features-2">
-            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/features-2.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/features-2.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-feature" id="features-3">
-            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/features-3.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/features-3.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-feature" id="features-4">
-            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/features-4.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/features-4.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-feature" id="features-5">
-            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/features-5.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/features-5.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-feature" id="features-6">
-            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/features-6.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/features-6.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-pricing" id="pricing-1">
-            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/pricing-1.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/pricing-1.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-article" id="articles-1">
-            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/articles-1.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/articles-1.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-article" id="articles-2">
-            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/articles-2.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/articles-2.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-cta" id="cta-1">
-            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/cta-1.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/cta-1.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-cta" id="cta-2">
-            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/cta-2.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/cta-2.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-form" id="form-1">
-            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/form-1.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/form-1.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-progress" id="progress-1">
-            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/progress-1.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/progress-1.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-list" id="list-1">
-            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/list-1.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/list-1.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-feed" id="feed-1">
-            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/feed-1.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/feed-1.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-notification" id="notification-1">
-            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/notification-1.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/notification-1.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-notification" id="notification-2">
-            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/notification-2.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/notification-2.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-stats" id="stats-1">
-            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/stats-1.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/stats-1.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-stats" id="stats-2">
-            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/stats-2.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/stats-2.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-cards" id="cards-1">
-            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208871/stitches/cards-1.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208871/stitches/cards-1.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-cards" id="cards-2">
-            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208866/stitches/cards-2.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208866/stitches/cards-2.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black">
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-tabs" id="tabs-1">
-            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/tabs-1.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1">
+            <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531208865/stitches/tabs-1.png" alt="" class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black">
         </figure>
       </div>
     </section>
@@ -146,7 +153,7 @@
         <button class="shadow text-center py-3 px-4 bg-black w-full hover:text-green text-white js-download transition-normal">Generate HTML with Functional CSS</button>
       </header>
       <div class="flex flex-col flex-1 border js-droppable border-grey-lighter overflow-y-scroll"></div>
-      <div class="text-center text-black py-4">Made by <a class="textgreene hover:ugreend text-green" href="https://amie-chen.com">👾 Amie Chen</a></div>
+      <div class="text-center text-black py-4">Made by <a class="textgreene hover:ugreend text-green" target="_blank" href="https://amie-chen.com">👾 Amie Chen</a></div>
     <div class="bg-white hidden fixed js-delete-btn px-4 py-2 shadow">Delete <i class="far fa-trash-alt pointer-events-none"></i></div>
     </section>
     <script src="bundle.js"></script>
