Add some more production/dev tooling
* Minify JS for production
* Use nodemon for the server
* Add watchify/babel for JS build

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <div class="text-center text-black py-4">Made by <a class="textgreene hover:ugreend text-green" target="_blank" href="https://amie-chen.com">👾 Amie Chen</a></div>
   <div class="bg-white hidden fixed js-delete-btn px-4 py-2 shadow">Delete <i class="far fa-trash-alt pointer-events-none"></i></div>
   </section>
-  <script src="bundle.js"></script>
+  <script src="public/client.js"></script>
   <script type="text/javascript">
     (function() {
       var trial = document.createElement('script');
