--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.icon" />
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css?family=Muli:200,300,400,600,700,800,900"
       rel="stylesheet"
@@ -43,7 +43,7 @@
           class="no-underline text-black no-underline text-black transition text-geen"
         >
           <img
-            src="https://stitches-cdn.hyperyolo.com/logo.svg"
+            src="./images/logo.svg"
             class="inline-block mr-2 w-10 -mb-2"
           />Stitches</a
         >
@@ -154,175 +154,175 @@
       >
         <figure class="js-snippet w-1/2 p-2 st-navigation" id="navigation-1">
           <img
-            src="https://stitches-cdn.hyperyolo.com/navigation-1.png"
+            src="./images/navigation-1.png"
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-navigation" id="navigation-2">
           <img
-            src="https://stitches-cdn.hyperyolo.com/navigation-2.png"
+            src="./images/navigation-2.png"
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-navigation" id="navigation-3">
           <img
-            src="https://stitches-cdn.hyperyolo.com/navigation-3.png"
+            src="./images/navigation-3.png"
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-navigation" id="navigation-4">
           <img
-            src="https://stitches-cdn.hyperyolo.com/navigation-4.png"
+            src="./images/navigation-4.png"
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-hero" id="hero-1">
           <img
-            src="https://stitches-cdn.hyperyolo.com/hero-1.png"
+            src="./images/hero-1.png"
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-hero" id="hero-2">
           <img
-            src="https://stitches-cdn.hyperyolo.com/hero-2.png"
+            src="./images/hero-2.png"
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-hero" id="hero-3">
           <img
-            src="https://stitches-cdn.hyperyolo.com/hero-3.png"
+            src="./images/hero-3.png"
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-footer" id="footer-1">
           <img
-            src="https://stitches-cdn.hyperyolo.com/footer-1.png"
+            src="./images/footer-1.png"
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-footer" id="footer-2">
           <img
-            src="https://stitches-cdn.hyperyolo.com/footer-2.png"
+            src="./images/footer-2.png"
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-footer" id="footer-3">
           <img
-            src="https://stitches-cdn.hyperyolo.com/footer-3.png"
+            src="./images/footer-3.png"
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-feature" id="features-1">
           <img
-            src="https://stitches-cdn.hyperyolo.com/features-1.png"
+            src="./images/features-1.png"
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-feature" id="features-2">
           <img
-            src="https://stitches-cdn.hyperyolo.com/features-2.png"
+            src="./images/features-2.png"
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-feature" id="features-3">
           <img
-            src="https://stitches-cdn.hyperyolo.com/features-3.png"
+            src="./images/features-3.png"
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-feature" id="features-4">
           <img
-            src="https://stitches-cdn.hyperyolo.com/features-4.png"
+            src="./images/features-4.png"
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-feature" id="features-5">
           <img
-            src="https://stitches-cdn.hyperyolo.com/features-5.png"
+            src="./images/features-5.png"
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-feature" id="features-6">
           <img
-            src="https://stitches-cdn.hyperyolo.com/features-6.png"
+            src="./images/features-6.png"
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-pricing" id="pricing-1">
           <img
-            src="https://stitches-cdn.hyperyolo.com/pricing-1.png"
+            src="./images/pricing-1.png"
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-article" id="articles-1">
           <img
-            src="https://stitches-cdn.hyperyolo.com/articles-1.png"
+            src="./images/articles-1.png"
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-article" id="articles-2">
           <img
-            src="https://stitches-cdn.hyperyolo.com/articles-2.png"
+            src="./images/articles-2.png"
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-cta" id="cta-1">
           <img
-            src="https://stitches-cdn.hyperyolo.com/cta-1.png"
+            src="./images/cta-1.png"
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-cta" id="cta-2">
           <img
-            src="https://stitches-cdn.hyperyolo.com/cta-2.png"
+            src="./images/cta-2.png"
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-form" id="form-1">
           <img
-            src="https://stitches-cdn.hyperyolo.com/form-1.png"
+            src="./images/form-1.png"
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-progress" id="progress-1">
           <img
-            src="https://stitches-cdn.hyperyolo.com/progress-1.png"
+            src="./images/progress-1.png"
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-list" id="list-1">
           <img
-            src="https://stitches-cdn.hyperyolo.com/list-1.png"
+            src="./images/list-1.png"
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-feed" id="feed-1">
           <img
-            src="https://stitches-cdn.hyperyolo.com/feed-1.png"
+            src="./images/feed-1.png"
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
@@ -332,7 +332,7 @@
           id="notification-1"
         >
           <img
-            src="https://stitches-cdn.hyperyolo.com/notification-1.png"
+            src="./images/notification-1.png"
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
@@ -342,42 +342,42 @@
           id="notification-2"
         >
           <img
-            src="https://stitches-cdn.hyperyolo.com/notification-2.png"
+            src="./images/notification-2.png"
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-stats" id="stats-1">
           <img
-            src="https://stitches-cdn.hyperyolo.com/stats-1.png"
+            src="./images/stats-1.png"
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-stats" id="stats-2">
           <img
-            src="https://stitches-cdn.hyperyolo.com/stats-2.png"
+            src="./images/stats-2.png"
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-cards" id="cards-1">
           <img
-            src="https://stitches-cdn.hyperyolo.com/cards-1.png"
+            src="./images/cards-1.png"
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-cards" id="cards-2">
           <img
-            src="https://stitches-cdn.hyperyolo.com/cards-2.png"
+            src="./images/cards-2.png"
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
         </figure>
         <figure class="js-snippet w-1/2 p-2 st-tabs" id="tabs-1">
           <img
-            src="https://stitches-cdn.hyperyolo.com/tabs-1.png"
+            src="./images/tabs-1.png"
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
